--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>LVL5 Squad — Sitio Oficial</title>
   <meta name="description" content="Comunidad gamer LVL5 Squad: streams, clips, música y más.">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%23000'/%3E%3Ctext x='50' y='58' font-size='44' text-anchor='middle' fill='%23fff' font-family='Arial,Helvetica,sans-serif'%3E5%3C/text%3E%3C/svg%3E">
+  <link rel="canonical" href="https://levelfivesquad.com.ar/">
   <style>
     :root{
       --bg:#0b0b10; --bg2:#11121a; --txt:#e8e8ee; --muted:#9aa0ad;
