Incorporación de logo 512x512 + html con 404 + actualización de robots.txt y sitemap.xml

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   <meta name="twitter:title" content="LVL5 Squad — Sitio Oficial">
   <meta name="twitter:description" content="Comunidad gamer LVL5 Squad: streams, clips, música y más.">
   <meta name="twitter:image" content="https://levelfivesquad.com.ar/img/og-cover.png">
+  <meta name="theme-color" content="#0b0b10">
+  <meta name="color-scheme" content="dark light">
+  <meta property="og:site_name" content="LVL5 Squad">
+  <meta property="og:locale" content="es_AR">
+  <meta name="twitter:card" content="summary_large_image">
+  
 
   <!-- CSS -->
   <link rel="preload" as="style" href="assets/css/styles.css" onload="this.rel='stylesheet'">
@@ -30,20 +36,20 @@
 
   <!-- Schema.org JSON-LD básico (mejora SEO) -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "LVL5 Squad",
-    "url": "https://levelfivesquad.com.ar/",
-    "logo": "https://levelfivesquad.com.ar/img/logo-1600-1600.png",
-    "sameAs": [
-      "https://twitch.tv/lvl5squad",
-      "https://www.youtube.com/@LVL5Squad",
-      "https://www.tiktok.com/@lvl5squad",
-      "https://discord.com/invite/vU77MfjyAa"
-    ]
-  }
-  </script>
+ {
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "LVL5 Squad",
+  "url": "https://levelfivesquad.com.ar/",
+  "logo": "https://levelfivesquad.com.ar/img/Logo%20PNG%20circular%201600-1600.png",
+  "sameAs": [
+    "https://twitch.tv/lvl5squad",
+    "https://www.youtube.com/@LVL5Squad",
+    "https://www.tiktok.com/@lvl5squad",
+    "https://discord.com/invite/vU77MfjyAa"
+  ]
+}
+ </script>
 </head>
 
 <body>
