--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
   ]
 }
  </script>
+ <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "XXXX"}'></script>
+
 </head>
 
 <body>
