modificacion en js para incorporar modo disponible de twitch

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <!-- Card de estado -->
   <div class="card" id="liveCard">
-    <div class="pill live" id="livePill">En vivo (si estamos)</div>
+    <div class="pill" id="livePill">En vivo (si estamos)</div>
     <p class="muted" id="liveNote" style="margin:.6rem 0 1rem">Seguinos en Twitch y activá notificaciones.</p>
 
     <!-- Info dinámica -->
