--- a/index.html
+++ b/index.html
@@ -1,133 +1,138 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LVL5 Squad - Gaming y Comunidad</title>
 
-  <title>LVL5 Squad — Sitio Oficial</title>
-  <meta name="description" content="Comunidad gamer LVL5 Squad: streams, clips, música y más.">
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="assets/styles.css" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://levelfivesquad.com.ar/">
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
 
-  <!-- Favicon simple (puedes cambiar por /img/favicon.svg si quieres) -->
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%230b0b10'/%3E%3Ctext x='50' y='60' font-size='48' text-anchor='middle' fill='%236ad1ff' font-family='Arial,Helvetica,sans-serif'%3E5%3C/text%3E%3C/svg%3E">
-
-  <!-- Open Graph / Twitter Cards -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://levelfivesquad.com.ar/">
-  <meta property="og:title" content="LVL5 Squad — Sitio Oficial">
-  <meta property="og:description" content="Comunidad gamer LVL5 Squad: streams, clips, música y más.">
-  <meta property="og:image" content="https://levelfivesquad.com.ar/img/og-cover.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="LVL5 Squad — Sitio Oficial">
-  <meta name="twitter:description" content="Comunidad gamer LVL5 Squad: streams, clips, música y más.">
-  <meta name="twitter:image" content="https://levelfivesquad.com.ar/img/og-cover.png">
-  <meta name="theme-color" content="#0b0b10">
-  <meta name="color-scheme" content="dark light">
-  <meta property="og:site_name" content="LVL5 Squad">
-  <meta property="og:locale" content="es_AR">
-  <meta name="twitter:card" content="summary_large_image">
-  
-
-  <!-- CSS -->
-  <link rel="preload" as="style" href="assets/css/styles.css" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="assets/css/styles.css"></noscript>
-
-  <!-- Schema.org JSON-LD básico (mejora SEO) -->
-  <script type="application/ld+json">
- {
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "LVL5 Squad",
-  "url": "https://levelfivesquad.com.ar/",
-  "logo": "https://levelfivesquad.com.ar/img/Logo%20PNG%20circular%201600-1600.png",
-  "sameAs": [
-    "https://twitch.tv/lvl5squad",
-    "https://www.youtube.com/@LVL5Squad",
-    "https://www.tiktok.com/@lvl5squad",
-    "https://discord.com/invite/vU77MfjyAa"
-  ]
-}
- </script>
- <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "XXXX"}'></script>
-
+  <!-- Open Graph / Twitter -->
+  <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad" />
+  <meta property="og:description" content="Gaming, humor, música y comunidad con estética pixel-art. Sumate al LVL5." />
+  <meta property="og:image" content="https://levelfivesquad.com.ar/assets/preview.png" />
+  <meta property="og:url" content="https://levelfivesquad.com.ar/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
-  <div class="wrap">
-    <header class="topbar" aria-label="Barra de navegación principal">
-      <a class="logo" href="#top" aria-label="LVL5 Squad inicio">
-        <div class="coin" aria-hidden="true"></div>
-        <span>LVL5 Squad</span>
-      </a>
-      <nav aria-label="Secciones del sitio">
-        <a class="btn" href="#nosotros">Nosotros</a>
-        <a class="btn" href="#links">Redes</a>
-        <a class="btn" href="#contacto">Contacto</a>
-        <a class="btn btn-brand" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver Twitch</a>
-      </nav>
-    </header>
-
-    <main id="top">
-      <section class="hero">
-  <div>
-    <span class="pill">Comunidad gamer • Argentina</span>
-    <h1>Gaming, humor y comunidad: ¡bienvenidos a LVL5!</h1>
-    <p>Streams, clips, música original y series con estética pixel-art. Unite al Discord para sumarte a eventos, sorteos y partidas con el squad.</p>
-    <div class="cta">
-      <a class="btn btn-brand" target="_blank" href="https://discord.com/invite/vU77MfjyAa">Unirme al Discord</a>
-      <a class="btn btn-accent" target="_blank" href="https://www.youtube.com/@LVL5Squad">YouTube</a>
-      <a class="btn" target="_blank" href="https://www.tiktok.com/@lvl5squad">TikTok</a>
-    </div>
-  </div>
-
-  <!-- Card de estado -->
-  <div class="card" id="liveCard">
-    <div class="pill" id="livePill">En vivo (si estamos)</div>
-    <p class="muted" id="liveNote" style="margin:.6rem 0 1rem">Seguinos en Twitch y activá notificaciones.</p>
-
-    <!-- Info dinámica -->
-    <div id="liveInfo" style="display:none; margin-bottom:.75rem;">
-      <strong id="liveTitle"></strong>
-      <div class="muted" id="liveViewers" style="margin-top:.25rem;"></div>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="logo">
+      <img src="assets/logo.png" alt="Logo LVL5 Squad" />
+      <span>LVL5 Squad</span>
     </div>
 
-    <!-- Embed cuando estamos en vivo -->
-    <div id="liveEmbed" style="display:none; margin-top:.5rem; border-radius:12px; overflow:hidden;">
-      <!-- el embed lo inyectamos desde JS -->
+    <nav class="nav-links">
+      <a href="#comunidad">Comunidad</a>
+      <a href="#contenido">Contenido</a>
+      <a href="#musica">Música</a>
+      <a href="#contacto">Contacto</a>
+      <a class="btn btn-violeta btn-twitch" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver Twitch</a>
+    </nav>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero" aria-label="Portada LVL5">
+    <div class="hero-text">
+      <h1>Gaming, humor y comunidad</h1>
+      <p>Streaming, clips, música y series con estética pixel-art. Unite al squad y viví el LVL5.</p>
+
+      <div class="hero-buttons">
+        <a class="btn btn-bordo" target="_blank" rel="noopener" href="https://discord.gg/tu-invitacion">Unirme al Discord</a>
+        <a class="btn btn-azul" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver en Twitch</a>
+      </div>
     </div>
 
-    <a class="btn btn-brand" id="twitchBtn" style="width:100%;text-align:center" target="_blank"
-       href="https://twitch.tv/lvl5squad">Abrir Twitch</a>
-  </div>
-</section>
+    <div class="hero-image">
+      <!-- Reemplazar por arte real -->
+      <img src="assets/hero-placeholder.png" alt="Arte pixel LVL5" />
+    </div>
+  </section>
 
-
-      <section id="nosotros" class="card" style="margin-top:8px">
-        <h2 style="margin-top:0">¿Quiénes somos?</h2>
-        <p>Somos un squad de cinco amigos creando contenido de gaming y humor. Nuestra estética mezcla retro, pixel-art y narrativa visual. Buscamos construir una comunidad participativa: tu interacción es el <strong>LVL5</strong>.</p>
-      </section>
-
-      <section id="links" style="margin-top:18px">
-        <h2>Redes y música</h2>
-        <div class="grid">
-          <a class="card" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad"><strong>Twitch</strong><br><span class="muted">Transmisiones</span></a>
-          <a class="card" target="_blank" rel="noopener" href="https://www.youtube.com/@LVL5Squad"><strong>YouTube</strong><br><span class="muted">Clips & VODs</span></a>
-          <a class="card" target="_blank" rel="noopener" href="https://www.tiktok.com/@lvl5squad"><strong>TikTok</strong><br><span class="muted">Shorts</span></a>
-          <a class="card" target="_blank" rel="noopener" href="https://discord.com/invite/vU77MfjyAa"><strong>Discord</strong><br><span class="muted">Comunidad</span></a>
-          <a class="card" target="_blank" rel="noopener" href="https://music.youtube.com/watch?v=CmF5iHqk6Qk"><strong>Música</strong><br><span class="muted">“5 Caminos”</span></a>
-          <a class="card" target="_blank" rel="noopener" href="mailto:contacto@levelfivesquad.com.ar"><strong>Contacto</strong><br><span class="muted">Escribinos</span></a>
+  <!-- COMUNIDAD -->
+  <section id="comunidad" class="section" aria-labelledby="titulo-comunidad">
+    <div class="section-content">
+      <div>
+        <h2 id="titulo-comunidad">¿Quiénes somos?</h2>
+        <p>Somos cinco amigos creando contenido gamer y humorístico con estética retro y pixel-art. Buscamos una comunidad
+           participativa donde <strong>tu interacción</strong> es el LVL5.</p>
+        <div class="pill-row">
+          <span class="pill">Comunidad gamer</span>
+          <span class="pill">Argentina</span>
+          <span class="pill">Pixel-art</span>
         </div>
-      </section>
-    </main>
+      </div>
+      <img src="assets/comunidad.png" alt="Integrantes del Squad LVL5" />
+    </div>
+  </section>
 
-    <footer id="contacto" class="footer" aria-label="Pie de página">
-      © <span id="y"></span> LVL5 Squad — Hecho con ♥ desde Argentina
-    </footer>
-  </div>
+  <!-- CONTENIDO DESTACADO -->
+  <section id="contenido" class="section cards" aria-labelledby="titulo-contenido">
+    <h2 id="titulo-contenido">Contenido destacado</h2>
 
-  <!-- JS -->
-  <script defer src="assets/js/main.js"></script>
+    <div class="card-grid">
+      <article class="card">
+        <img src="assets/twitch.png" alt="Canal de Twitch" />
+        <h3>Twitch</h3>
+        <p>Streams en vivo y eventos con la comunidad.</p>
+        <a class="btn btn-violeta" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver canal</a>
+      </article>
+
+      <article class="card">
+        <img src="assets/youtube.png" alt="Canal de YouTube" />
+        <h3>YouTube</h3>
+        <p>Clips, VODs y series originales del squad.</p>
+        <a class="btn btn-rojo" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">Ver canal</a>
+      </article>
+
+      <article class="card">
+        <img src="assets/tiktok.png" alt="Perfil de TikTok" />
+        <h3>TikTok</h3>
+        <p>Shorts, trends y humor gaming.</p>
+        <a class="btn btn-azul" target="_blank" rel="noopener" href="https://tiktok.com/@lvl5squad">Ver canal</a>
+      </article>
+    </div>
+
+    <!-- Fila secundaria de redes (opcional) -->
+    <div class="chip-row">
+      <a class="chip chip-verde" target="_blank" rel="noopener" href="https://kick.com/lvl5squad">Kick</a>
+      <a class="chip chip-azul"  target="_blank" rel="noopener" href="https://facebook.com/level-five-squad">Facebook</a>
+    </div>
+  </section>
+
+  <!-- MÚSICA -->
+  <section id="musica" class="section" aria-labelledby="titulo-musica">
+    <div class="section-content musica">
+      <div>
+        <h2 id="titulo-musica">Música</h2>
+        <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
+        <div class="hero-buttons">
+          <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
+          <!-- Agregar Spotify cuando esté disponible -->
+        </div>
+      </div>
+      <img src="assets/music-cover.png" alt="Portada del tema 5 Caminos" />
+    </div>
+  </section>
+
+  <!-- CONTACTO -->
+  <section id="contacto" class="section" aria-labelledby="titulo-contacto">
+    <div class="section-content contacto">
+      <h2 id="titulo-contacto">Contacto</h2>
+      <p>¿Querés colaborar, sponsorear o sumarte al equipo? Escribinos.</p>
+      <a class="btn btn-bordo" href="mailto:divestudios.esin@prefecturanaval.edu.ar">Enviar email</a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 LVL5 Squad — Hecho con ❤️ en Argentina</p>
+  </footer>
 </body>
 </html>
