cambio en el dc

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <p>Streaming, clips, música y series con estética pixel-art. Unite al squad y viví el LVL5.</p>
 
       <div class="hero-buttons">
-        <a class="btn btn-bordo" target="_blank" rel="noopener" href="https://discord.gg/tu-invitacion">Unirme al Discord</a>
+        <a class="btn btn-bordo" target="_blank" rel="noopener" href="https://discord.com/invite/vU77MfjyAa">Unirme al Discord</a>
         <a class="btn btn-azul" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver en Twitch</a>
       </div>
     </div>
