--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>LVL5 Squad - Gaming y Comunidad</title>
 
   <!-- CSS principal -->
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 
   <!-- Favicon / Logo -->
-  <link rel="icon" type="image/png" href="assets/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/img/logo.png" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad" />
-  <meta property="og:description" content="Gaming, humor, música y comunidad con estética pixel-art. Sumate al LVL5." />
-  <meta property="og:image" content="https://levelfivesquad.com.ar/assets/preview.png" />
+  <meta property="og:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5." />
+  <meta property="og:image" content="assets/img/preview.png" />
   <meta property="og:url" content="https://levelfivesquad.com.ar/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -24,7 +24,7 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo LVL5 Squad" />
+      <img src="assets/img/logo.png" alt="Logo LVL5 Squad" />
       <span>LVL5 Squad</span>
     </div>
 
@@ -41,17 +41,17 @@
   <section class="hero" aria-label="Portada LVL5">
     <div class="hero-text">
       <h1>Gaming, humor y comunidad</h1>
-      <p>Streaming, clips, música y series con estética pixel-art. Unite al squad y viví el LVL5.</p>
+      <p>Streaming, clips, música y series con estética anime. Unite al squad y viví el LVL5.</p>
 
       <div class="hero-buttons">
-        <a class="btn btn-bordo" target="_blank" rel="noopener" href="https://discord.com/invite/vU77MfjyAa">Unirme al Discord</a>
-        <a class="btn btn-azul" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver en Twitch</a>
+      <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
+      <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
       </div>
+
     </div>
 
     <div class="hero-image">
-      <!-- Reemplazar por arte real -->
-      <img src="assets/hero-placeholder.png" alt="Arte pixel LVL5" />
+      <img src="assets/img/hero-placeholder.png" alt="Arte hero LVL5" />
     </div>
   </section>
 
@@ -60,15 +60,15 @@
     <div class="section-content">
       <div>
         <h2 id="titulo-comunidad">¿Quiénes somos?</h2>
-        <p>Somos cinco amigos creando contenido gamer y humorístico con estética retro y pixel-art. Buscamos una comunidad
+        <p>Somos cinco amigos creando contenido gamer y de humor con estética anime. Buscamos una comunidad
            participativa donde <strong>tu interacción</strong> es el LVL5.</p>
         <div class="pill-row">
           <span class="pill">Comunidad gamer</span>
           <span class="pill">Argentina</span>
-          <span class="pill">Pixel-art</span>
+          <span class="pill">Anime</span>
         </div>
       </div>
-      <img src="assets/comunidad.png" alt="Integrantes del Squad LVL5" />
+      <img src="assets/img/comunidad.png" alt="Integrantes del Squad LVL5" />
     </div>
   </section>
 
@@ -78,28 +78,27 @@
 
     <div class="card-grid">
       <article class="card">
-        <img src="assets/twitch.png" alt="Canal de Twitch" />
+        <img src="assets/img/twitch.png" alt="Canal de Twitch" />
         <h3>Twitch</h3>
         <p>Streams en vivo y eventos con la comunidad.</p>
         <a class="btn btn-violeta" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver canal</a>
       </article>
 
       <article class="card">
-        <img src="assets/youtube.png" alt="Canal de YouTube" />
+        <img src="assets/img/youtube.png" alt="Canal de YouTube" />
         <h3>YouTube</h3>
         <p>Clips, VODs y series originales del squad.</p>
         <a class="btn btn-rojo" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">Ver canal</a>
       </article>
 
       <article class="card">
-        <img src="assets/tiktok.png" alt="Perfil de TikTok" />
+        <img src="assets/img/tiktok.png" alt="Perfil de TikTok" />
         <h3>TikTok</h3>
         <p>Shorts, trends y humor gaming.</p>
         <a class="btn btn-azul" target="_blank" rel="noopener" href="https://tiktok.com/@lvl5squad">Ver canal</a>
       </article>
     </div>
 
-    <!-- Fila secundaria de redes (opcional) -->
     <div class="chip-row">
       <a class="chip chip-verde" target="_blank" rel="noopener" href="https://kick.com/lvl5squad">Kick</a>
       <a class="chip chip-azul"  target="_blank" rel="noopener" href="https://facebook.com/level-five-squad">Facebook</a>
@@ -114,10 +113,9 @@
         <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
         <div class="hero-buttons">
           <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
-          <!-- Agregar Spotify cuando esté disponible -->
         </div>
       </div>
-      <img src="assets/music-cover.png" alt="Portada del tema 5 Caminos" />
+      <img src="assets/img/.png" alt="Portada del tema 5 Caminos" />
     </div>
   </section>
 
@@ -130,7 +128,6 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     <p>© 2025 LVL5 Squad — Hecho con ❤️ en Argentina</p>
   </footer>
