--- a/index.html
+++ b/index.html
@@ -107,17 +107,19 @@
 
   <!-- MÚSICA -->
   <section id="musica" class="section" aria-labelledby="titulo-musica">
-    <div class="section-content musica">
-      <div>
-        <h2 id="titulo-musica">Música</h2>
-        <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
-        <div class="hero-buttons">
-          <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
-        </div>
+  <div class="section-content musica">
+    <div>
+      <h2 id="titulo-musica">Música</h2>
+      <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
+      <div class="hero-buttons">
+        <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
+        <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
       </div>
-      <img src="assets/img/.png" alt="Portada del tema 5 Caminos" />
     </div>
+    <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
+  </div>
   </section>
+
 
   <!-- CONTACTO -->
   <section id="contacto" class="section" aria-labelledby="titulo-contacto">
