--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <article class="card">
         <img src="assets/img/youtube.png" alt="Canal de YouTube" />
         <h3>YouTube</h3>
-        <p>Clips, VODs y series originales del squad.</p>
+        <p>Clips, VODs, resubidos y series originales del squad.</p>
         <a class="btn btn-rojo" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">Ver canal</a>
       </article>
 
@@ -116,7 +116,7 @@
         <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
       </div>
     </div>
-    <img src="assets/img/tunecore_share_release_1232208139.png" alt="Escuchar 5 Caminos en TuneCore" />
+    <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
   </div>
   </section>
 
