cambio en el codigo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad" />
   <meta property="og:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5." />
-  <meta property="og:image" content="assets/img/preview.png" />
+  <meta property="og:image" content="assets/img/og-cover.png" />
   <meta property="og:url" content="https://levelfivesquad.com.ar/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -44,10 +44,9 @@
       <p>Streaming, clips, música y series con estética anime. Unite al squad y viví el LVL5.</p>
 
       <div class="hero-buttons">
-      <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
-      <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
+        <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
+        <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
       </div>
-
     </div>
 
     <div class="hero-image">
@@ -107,20 +106,18 @@
 
   <!-- MÚSICA -->
   <section id="musica" class="section" aria-labelledby="titulo-musica">
-  <div class="section-content musica">
-    <div>
-      <h2 id="titulo-musica">Música</h2>
-      <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
-      <div class="hero-buttons">
-        <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
-        <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
+    <div class="section-content musica">
+      <div>
+        <h2 id="titulo-musica">Música</h2>
+        <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
+        <div class="hero-buttons">
+          <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
+          <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
+        </div>
       </div>
+      <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" loading="lazy" />
     </div>
-    <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
-  </div>
   </section>
-
-
 
   <!-- CONTACTO -->
   <section id="contacto" class="section" aria-labelledby="titulo-contacto">
