--- a/index.html
+++ b/index.html
@@ -5,19 +5,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LVL5 Squad - Gaming y Comunidad</title>
 
+  <!-- Canonical -->
+  <link rel="canonical" href="https://levelfivesquad.com.ar/" />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logo.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/img/logo-512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo-512.png">
+  <meta name="theme-color" content="#0b0f14">
+
+  <!-- Robots -->
+  <meta name="robots" content="index,follow,max-image-preview:large">
+  <meta name="googlebot" content="index,follow">
+
+  <!-- Primary Meta -->
+  <meta name="title" content="LVL5 Squad - Gaming y Comunidad">
+  <meta name="description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5.">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad">
+  <meta property="og:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://levelfivesquad.com.ar/">
+  <meta property="og:site_name" content="LVL5 Squad">
+  <meta property="og:locale" content="es_AR">
+  <meta property="og:image" content="https://levelfivesquad.com.ar/assets/img/og-cover.png">
+  <meta property="og:image:secure_url" content="https://levelfivesquad.com.ar/assets/img/og-cover.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="LVL5 Squad - Gaming y Comunidad">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="LVL5 Squad - Gaming y Comunidad">
+  <meta name="twitter:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5.">
+  <meta name="twitter:image" content="https://levelfivesquad.com.ar/assets/img/og-cover.png">
+  <meta name="twitter:image:alt" content="LVL5 Squad - Gaming y Comunidad">
+  <meta name="twitter:site" content="@LVL5SQUAD">
+  <meta name="twitter:creator" content="@LVL5SQUAD">
+
+  <!-- Alternate hreflang -->
+  <link rel="alternate" href="https://levelfivesquad.com.ar/" hreflang="es-ar">
+  <link rel="alternate" href="https://levelfivesquad.com.ar/" hreflang="es">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "LVL5 Squad",
+    "url": "https://levelfivesquad.com.ar/",
+    "logo": "https://levelfivesquad.com.ar/assets/img/logo-512.png",
+    "sameAs": [
+      "https://twitch.tv/lvl5squad",
+      "https://youtube.com/@LVL5SQUAD",
+      "https://tiktok.com/@lvl5squad",
+      "https://facebook.com/level-five-squad",
+      "https://kick.com/lvl5squad",
+      "https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA"
+    ],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "divestudios.esin@prefecturanaval.edu.ar",
+      "contactType": "customer support",
+      "areaServed": "AR",
+      "availableLanguage": ["es"]
+    }
+  }
+  </script>
+
   <!-- CSS principal -->
   <link rel="stylesheet" href="assets/css/styles.css" />
-
-  <!-- Favicon / Logo -->
-  <link rel="icon" type="image/png" href="assets/img/logo.png" />
-
-  <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad" />
-  <meta property="og:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5." />
-  <meta property="og:image" content="assets/img/og-cover.png" />
-  <meta property="og:url" content="https://levelfivesquad.com.ar/" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
@@ -59,8 +118,7 @@
     <div class="section-content">
       <div>
         <h2 id="titulo-comunidad">¿Quiénes somos?</h2>
-        <p>Somos cinco amigos creando contenido gamer y de humor con estética anime. Buscamos una comunidad
-           participativa donde <strong>tu interacción</strong> es el LVL5.</p>
+        <p>Somos cinco amigos creando contenido gamer y de humor con estética anime. Buscamos una comunidad participativa donde <strong>tu interacción</strong> es el LVL5.</p>
         <div class="pill-row">
           <span class="pill">Comunidad gamer</span>
           <span class="pill">Argentina</span>
@@ -100,7 +158,7 @@
 
     <div class="chip-row">
       <a class="chip chip-verde" target="_blank" rel="noopener" href="https://kick.com/lvl5squad">Kick</a>
-      <a class="chip chip-azul"  target="_blank" rel="noopener" href="https://facebook.com/level-five-squad">Facebook</a>
+      <a class="chip chip-azul" target="_blank" rel="noopener" href="https://facebook.com/level-five-squad">Facebook</a>
     </div>
   </section>
 
@@ -115,7 +173,7 @@
           <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
         </div>
       </div>
-      <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" loading="lazy" />
+      <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
     </div>
   </section>
 
