--- a/index.html
+++ b/index.html
@@ -3,65 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LVL5 Squad — Gaming y Comunidad</title>
+  <title>LVL5 Squad - Gaming y Comunidad</title>
 
-  <!-- SEO básico -->
-  <meta name="description" content="Gaming, humor, música y comunidad con estética anime. Unite al LVL5 Squad." />
-  <link rel="canonical" href="https://levelfivesquad.com.ar/" />
-  <meta name="theme-color" content="#111723" />
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://levelfivesquad.com.ar/" />
-  <meta property="og:title" content="LVL5 Squad — Gaming y Comunidad" />
-  <meta property="og:description" content="Streaming, clips, música y series con estética anime. Sumate al LVL5." />
-  <meta property="og:image" content="/assets/img/og-cover.png" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="LVL5 Squad — Gaming y Comunidad" />
-  <meta name="twitter:description" content="Streaming, clips, música y series con estética anime. Sumate al LVL5." />
-  <meta name="twitter:image" content="/assets/img/og-cover.png" />
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="assets/css/styles.css" />
 
   <!-- Favicon / Logo -->
-  <link rel="icon" type="image/png" href="/assets/img/logo.png" />
-  <link rel="apple-touch-icon" href="/assets/img/logo-512.png" />
+  <link rel="icon" type="image/png" href="assets/img/logo.png" />
 
-  <!-- Datos estructurados -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "LVL5 Squad",
-    "url": "https://levelfivesquad.com.ar/",
-    "logo": "https://levelfivesquad.com.ar/assets/img/logo-512.png",
-    "sameAs": [
-      "https://twitch.tv/lvl5squad",
-      "https://youtube.com/@LVL5SQUAD",
-      "https://tiktok.com/@lvl5squad",
-      "https://facebook.com/level-five-squad",
-      "https://kick.com/lvl5squad",
-      "https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA"
-    ],
-    "contactPoint": [{
-      "@type": "ContactPoint",
-      "email": "contacto@levelfivesquad.com.ar",
-      "contactType": "customer support",
-      "areaServed": "AR",
-      "availableLanguage": ["es"]
-    }]
-  }
-  </script>
-
-  <!-- CSS principal (cache-busting) -->
-  <link rel="stylesheet" href="/assets/css/styles.css?v=2025-09-03-1" />
+  <!-- Open Graph / Twitter -->
+  <meta property="og:title" content="LVL5 Squad - Gaming y Comunidad" />
+  <meta property="og:description" content="Gaming, humor, música y comunidad con estética anime. Sumate al LVL5." />
+  <meta property="og:image" content="assets/img/og-cover.png" />
+  <meta property="og:url" content="https://levelfivesquad.com.ar/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
   <!-- HEADER -->
   <header class="site-header">
     <div class="logo">
-      <img src="/assets/img/logo.png" alt="Logo LVL5 Squad" />
+      <img src="assets/img/logo.png" alt="Logo LVL5 Squad" />
       <span>LVL5 Squad</span>
     </div>
 
@@ -70,9 +33,7 @@
       <a href="#contenido">Contenido</a>
       <a href="#musica">Música</a>
       <a href="#contacto">Contacto</a>
-      <a class="btn btn-violeta btn-twitch" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">
-        Ver Twitch <span id="status-nav" class="status-badge">●</span>
-      </a>
+      <a class="btn btn-violeta btn-twitch" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver Twitch</a>
     </nav>
   </header>
 
@@ -83,20 +44,19 @@
       <p>Streaming, clips, música y series con estética anime. Unite al squad y viví el LVL5.</p>
 
       <div class="hero-buttons">
-        <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">YouTube</a>
+        <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
         <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
       </div>
 
-      <!-- Estado Twitch (detalle) -->
-      <div class="twitch-status" id="status-hero">
-        <span class="badge" id="status-hero-badge">Offline</span>
-        <p>Seguinos en Twitch y activá notificaciones.</p>
+      <!-- Estado en vivo -->
+      <div id="live-status" class="live-box">
+        <span class="status-text">Cargando estado...</span>
         <a class="btn btn-azul" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Abrir Twitch</a>
       </div>
     </div>
 
     <div class="hero-image">
-      <img src="/assets/img/hero-placeholder.png" alt="Arte principal LVL5 Squad" />
+      <img src="assets/img/hero-placeholder.png" alt="Arte principal LVL5 Squad" />
     </div>
   </section>
 
@@ -113,7 +73,7 @@
           <span class="pill">Anime</span>
         </div>
       </div>
-      <img src="/assets/img/comunidad.png" alt="Integrantes del Squad LVL5" />
+      <img src="assets/img/comunidad.png" alt="Integrantes del Squad LVL5" />
     </div>
   </section>
 
@@ -123,21 +83,21 @@
 
     <div class="card-grid">
       <article class="card">
-        <img src="/assets/img/twitch.png" alt="Canal de Twitch" />
+        <img src="assets/img/twitch.png" alt="Canal de Twitch" />
         <h3>Twitch</h3>
         <p>Streams en vivo y eventos con la comunidad.</p>
         <a class="btn btn-violeta" target="_blank" rel="noopener" href="https://twitch.tv/lvl5squad">Ver canal</a>
       </article>
 
       <article class="card">
-        <img src="/assets/img/youtube.png" alt="Canal de YouTube" />
+        <img src="assets/img/youtube.png" alt="Canal de YouTube" />
         <h3>YouTube</h3>
         <p>Clips, VODs, resubidos y series originales del squad.</p>
         <a class="btn btn-rojo" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">Ver canal</a>
       </article>
 
       <article class="card">
-        <img src="/assets/img/tiktok.png" alt="Perfil de TikTok" />
+        <img src="assets/img/tiktok.png" alt="Perfil de TikTok" />
         <h3>TikTok</h3>
         <p>Shorts, trends y humor gaming.</p>
         <a class="btn btn-azul" target="_blank" rel="noopener" href="https://tiktok.com/@lvl5squad">Ver canal</a>
@@ -157,11 +117,11 @@
         <h2 id="titulo-musica">Música</h2>
         <p>Escuchá <strong>“5 Caminos”</strong> y otras creaciones originales del squad.</p>
         <div class="hero-buttons">
-          <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtube.com/@LVL5SQUAD">YouTube</a>
+          <a class="btn btn-blanco" target="_blank" rel="noopener" href="https://youtu.be/CmF5iHqk6Qk">YouTube</a>
           <a class="btn btn-verde" target="_blank" rel="noopener" href="https://social.tunecore.com/linkShare?linkid=2VHth4wOu0rPGpYlQ_t1gA">Escuchar en TuneCore</a>
         </div>
       </div>
-      <img src="/assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
+      <img src="assets/img/tunecore_share.png" alt="Escuchar 5 Caminos en TuneCore" />
     </div>
   </section>
 
@@ -178,13 +138,7 @@
     <p>© 2025 LVL5 Squad — Hecho con ❤️ en Argentina</p>
   </footer>
 
-  <!-- Config para JS -->
-  <script>
-    // Endpoint del Worker de Cloudflare que ya tenés:
-    window.LVL5 = { TWITCH_STATUS_URL: "/api/twitch/status" };
-  </script>
-
-  <!-- JS principal (cache-busting) -->
-  <script src="/assets/js/main.js?v=2025-09-03-1" defer></script>
+  <!-- Script para estado Twitch -->
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
