--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>LVL5 Squad - Gaming y Comunidad</title>
 
   <!-- CSS principal -->
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025.09.04.1" />
+  <script defer src="assets/js/main.js?v=2025.09.04.1"></script>
 
   <!-- Favicon / Logo -->
   <link rel="icon" type="image/png" href="assets/img/logo.png" />
@@ -142,3 +143,4 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
