Arreglo en las clases de botones y adición de enlace a Discord

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <img src="assets/img/tiktok.png" alt="Perfil de TikTok" />
         <h3>TikTok</h3>
         <p>Shorts, trends y humor gaming.</p>
-        <a class="btn btn-azul" target="_blank" rel="noopener" href="https://tiktok.com/@lvl5squad">Ver canal</a>
+        <a class="btn btn-rosa" target="_blank" rel="noopener" href="https://tiktok.com/@lvl5squad">Ver canal</a>
       </article>
 
       <article class="card">
@@ -121,6 +121,13 @@
         <h3>Facebook</h3>
         <p>Streams en vivo y eventos con la comunidad</p>
         <a class="btn btn-azul" target="_blank" rel="noopener" href="https://facebook.com/level-five-squad">Ver canal</a>
+      </article>
+
+            <article class="card">
+        <img src="assets/img/tiktok.png" alt="Discord" />
+        <h3>Discord</h3>
+        <p>Discord oficial del canal. Podrás unirte y participar de los juegos y eventos en vivo.</p>
+        <a class="btn btn-gris" target="_blank" rel="noopener" href="https://discord.com/invite/vU77MfjyAa">Ver canal</a>
       </article>
 
     </div>
